syntax = "proto3";

package gastrolog.v1;

option go_package = "gastrolog/api/gen/gastrolog/v1;gastrologv1";

// ConfigService provides configuration management.
service ConfigService {
  // GetConfig returns the current configuration.
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);

  // ListIngesters returns all registered ingesters.
  rpc ListIngesters(ListIngestersRequest) returns (ListIngestersResponse);

  // GetIngesterStatus returns status for a specific ingester.
  rpc GetIngesterStatus(GetIngesterStatusRequest) returns (GetIngesterStatusResponse);

  // PutFilter creates or updates a filter.
  rpc PutFilter(PutFilterRequest) returns (PutFilterResponse);

  // DeleteFilter removes a filter.
  rpc DeleteFilter(DeleteFilterRequest) returns (DeleteFilterResponse);

  // PutRotationPolicy creates or updates a rotation policy.
  rpc PutRotationPolicy(PutRotationPolicyRequest) returns (PutRotationPolicyResponse);

  // DeleteRotationPolicy removes a rotation policy.
  rpc DeleteRotationPolicy(DeleteRotationPolicyRequest) returns (DeleteRotationPolicyResponse);

  // PutRetentionPolicy creates or updates a retention policy.
  rpc PutRetentionPolicy(PutRetentionPolicyRequest) returns (PutRetentionPolicyResponse);

  // DeleteRetentionPolicy removes a retention policy.
  rpc DeleteRetentionPolicy(DeleteRetentionPolicyRequest) returns (DeleteRetentionPolicyResponse);

  // PutVault creates or updates a vault.
  rpc PutVault(PutVaultRequest) returns (PutVaultResponse);

  // DeleteVault removes a vault (must be empty).
  rpc DeleteVault(DeleteVaultRequest) returns (DeleteVaultResponse);

  // PutIngester creates or updates an ingester.
  rpc PutIngester(PutIngesterRequest) returns (PutIngesterResponse);

  // DeleteIngester removes an ingester.
  rpc DeleteIngester(DeleteIngesterRequest) returns (DeleteIngesterResponse);

  // GetSettings returns system settings (auth, query, scheduler, TLS, lookup).
  rpc GetSettings(GetSettingsRequest) returns (GetSettingsResponse);

  // PutSettings updates system settings. Only fields explicitly set are updated.
  rpc PutSettings(PutSettingsRequest) returns (PutSettingsResponse);

  // GetPreferences returns the current user's preferences.
  rpc GetPreferences(GetPreferencesRequest) returns (GetPreferencesResponse);

  // PutPreferences updates the current user's preferences.
  rpc PutPreferences(PutPreferencesRequest) returns (PutPreferencesResponse);

  // GetSavedQueries returns the current user's saved queries.
  rpc GetSavedQueries(GetSavedQueriesRequest) returns (GetSavedQueriesResponse);

  // PutSavedQuery creates or updates a saved query by name.
  rpc PutSavedQuery(PutSavedQueryRequest) returns (PutSavedQueryResponse);

  // DeleteSavedQuery removes a saved query by name.
  rpc DeleteSavedQuery(DeleteSavedQueryRequest) returns (DeleteSavedQueryResponse);

  // ListCertificates returns all certificates.
  rpc ListCertificates(ListCertificatesRequest) returns (ListCertificatesResponse);

  // GetCertificate returns a certificate by ID (includes PEM content).
  rpc GetCertificate(GetCertificateRequest) returns (GetCertificateResponse);

  // PutCertificate creates or updates a certificate.
  rpc PutCertificate(PutCertificateRequest) returns (PutCertificateResponse);

  // DeleteCertificate removes a certificate.
  rpc DeleteCertificate(DeleteCertificateRequest) returns (DeleteCertificateResponse);

  // PauseVault pauses ingestion for a vault.
  rpc PauseVault(PauseVaultRequest) returns (PauseVaultResponse);

  // ResumeVault resumes ingestion for a vault.
  rpc ResumeVault(ResumeVaultRequest) returns (ResumeVaultResponse);

  // TestIngester tests connectivity for an ingester configuration without saving it.
  rpc TestIngester(TestIngesterRequest) returns (TestIngesterResponse);

  // GetIngesterDefaults returns default parameter values for each ingester type.
  rpc GetIngesterDefaults(GetIngesterDefaultsRequest) returns (GetIngesterDefaultsResponse);

  // PutNodeConfig creates or updates a node configuration.
  rpc PutNodeConfig(PutNodeConfigRequest) returns (PutNodeConfigResponse);

  // PutRoute creates or updates a route.
  rpc PutRoute(PutRouteRequest) returns (PutRouteResponse);

  // DeleteRoute removes a route.
  rpc DeleteRoute(DeleteRouteRequest) returns (DeleteRouteResponse);

  // GenerateName returns a random petname for use as a default entity name.
  rpc GenerateName(GenerateNameRequest) returns (GenerateNameResponse);

  // WatchConfig streams a notification whenever configuration changes.
  rpc WatchConfig(WatchConfigRequest) returns (stream WatchConfigResponse);
}

message GetConfigRequest {}

message GetConfigResponse {
  repeated VaultConfig vaults = 1;
  repeated IngesterConfig ingesters = 2;
  repeated RotationPolicyConfig rotation_policies = 3;
  repeated FilterConfig filters = 4;
  repeated RetentionPolicyConfig retention_policies = 5;
  repeated NodeConfig node_configs = 6;
  repeated RouteConfig routes = 7;
}

message RetentionRule {
  string retention_policy_id = 1;
  string action = 2;              // "expire" or "migrate"
  string destination_id = 3;      // target vault, only for action=migrate
}

message VaultConfig {
  string id = 1;
  string type = 2;
  // field 3 was 'filter' (UUID) — routing moved to RouteConfig
  reserved 3;
  string policy = 4;
  map<string, string> params = 5;
  // field 6 was 'retention' (single UUID) — removed
  bool enabled = 7;
  string name = 8;
  repeated RetentionRule retention_rules = 9;
  string node_id = 10;
}

message RouteDestination {
  string vault_id = 1;
}

message RouteConfig {
  string id = 1;
  string name = 2;
  string filter_id = 3;                       // references FilterConfig.id
  repeated RouteDestination destinations = 4;
  string distribution = 5;                     // "fanout" (default) or "round-robin"
  bool enabled = 6;
}

message IngesterConfig {
  string id = 1;
  string type = 2;
  map<string, string> params = 3;
  bool enabled = 4;
  string name = 5;
  string node_id = 6;
}

message FilterConfig {
  string expression = 1;
  string id = 2;
  string name = 3;
}

message RotationPolicyConfig {
  int64 max_bytes = 1;
  int64 max_records = 2;
  int64 max_age_seconds = 3;
  string cron = 4;
  string id = 5;
  string name = 6;
}

message RetentionPolicyConfig {
  int64 max_age_seconds = 1;
  int64 max_bytes = 2;
  int64 max_chunks = 3;
  string id = 4;
  string name = 5;
}

message ListIngestersRequest {}

message ListIngestersResponse {
  repeated IngesterInfo ingesters = 1;
}

message IngesterInfo {
  string id = 1;
  string type = 2;
  bool running = 3;
  string name = 4;
  string node_id = 5;
}

message GetIngesterStatusRequest {
  string id = 1;
}

message GetIngesterStatusResponse {
  string id = 1;
  string type = 2;
  bool running = 3;
  int64 messages_ingested = 4;
  int64 errors = 5;
  int64 bytes_ingested = 6;
}

message PutFilterRequest {
  FilterConfig config = 2;
}

message PutFilterResponse {}

message DeleteFilterRequest {
  string id = 1;
}

message DeleteFilterResponse {}

message PutRotationPolicyRequest {
  RotationPolicyConfig config = 2;
}

message PutRotationPolicyResponse {}

message DeleteRotationPolicyRequest {
  string id = 1;
}

message DeleteRotationPolicyResponse {}

message PutRetentionPolicyRequest {
  RetentionPolicyConfig config = 2;
}

message PutRetentionPolicyResponse {}

message DeleteRetentionPolicyRequest {
  string id = 1;
}

message DeleteRetentionPolicyResponse {}

message PutVaultRequest {
  VaultConfig config = 1;
}

message PutVaultResponse {}

message DeleteVaultRequest {
  string id = 1;
  bool force = 2;
}

message DeleteVaultResponse {}

message PutRouteRequest {
  RouteConfig config = 1;
}

message PutRouteResponse {}

message DeleteRouteRequest {
  string id = 1;
}

message DeleteRouteResponse {}

message PutIngesterRequest {
  IngesterConfig config = 1;
}

message PutIngesterResponse {}

message DeleteIngesterRequest {
  string id = 1;
}

message DeleteIngesterResponse {}

message GetSettingsRequest {
  bool include_secrets = 1; // When true, return actual secret values (for export/backup).
}

// Sub-messages for GetSettingsResponse (read-only fields included).

message PasswordPolicySettings {
  int32 min_length = 1;
  bool require_mixed_case = 2;
  bool require_digit = 3;
  bool require_special = 4;
  int32 max_consecutive_repeats = 5;
  bool forbid_animal_noise = 6;
}

message MaxMindSettings {
  bool auto_download = 1;
  bool license_configured = 2;   // read-only: true when account_id + license_key are both set
  string last_update = 3;         // read-only: RFC3339 timestamp of last successful download
  string account_id = 4;          // only populated when include_secrets
  string license_key = 5;         // only populated when include_secrets
}

message AuthSettings {
  string token_duration = 1;
  bool jwt_secret_configured = 2; // read-only: true when a JWT secret exists
  string refresh_token_duration = 3;
  PasswordPolicySettings password_policy = 4;
  string jwt_secret = 5;           // only populated when include_secrets
}

message QuerySettings {
  string timeout = 1;
  string max_follow_duration = 2;
  int32 max_result_count = 3;
}

message SchedulerSettings {
  int32 max_concurrent_jobs = 1;
}

message TLSSettings {
  string default_cert = 1;
  bool enabled = 2;
  bool http_to_https_redirect = 3;
  string https_port = 4;
}

message LookupSettings {
  string geoip_db_path = 1;
  string asn_db_path = 2;
  MaxMindSettings maxmind = 3;
}

message ClusterSettings {
  string broadcast_interval = 1; // Go duration string, e.g. "5s". Default: "5s".
}

message GetSettingsResponse {
  AuthSettings auth = 1;
  QuerySettings query = 2;
  SchedulerSettings scheduler = 3;
  TLSSettings tls = 4;
  LookupSettings lookup = 5;
  bool setup_wizard_dismissed = 6;
  string node_id = 7;
  string node_name = 8;
  ClusterSettings cluster = 9;
}

// Sub-messages for PutSettingsRequest (optional fields for merge semantics).

message PutPasswordPolicySettings {
  optional int32 min_length = 1;
  optional bool require_mixed_case = 2;
  optional bool require_digit = 3;
  optional bool require_special = 4;
  optional int32 max_consecutive_repeats = 5;
  optional bool forbid_animal_noise = 6;
}

message PutAuthSettings {
  optional string token_duration = 1;
  optional string jwt_secret = 2;
  optional string refresh_token_duration = 3;
  PutPasswordPolicySettings password_policy = 4;
}

message PutQuerySettings {
  optional string timeout = 1;
  optional string max_follow_duration = 2;
  optional int32 max_result_count = 3;
}

message PutSchedulerSettings {
  optional int32 max_concurrent_jobs = 1;
}

message PutTLSSettings {
  optional string default_cert = 1;
  optional bool enabled = 2;
  optional bool http_to_https_redirect = 3;
  optional string https_port = 4;
}

message PutMaxMindSettings {
  optional bool auto_download = 1;
  optional string account_id = 2;
  optional string license_key = 3;
}

message PutLookupSettings {
  optional string geoip_db_path = 1;
  optional string asn_db_path = 2;
  PutMaxMindSettings maxmind = 3;
}

message PutClusterSettings {
  optional string broadcast_interval = 1;
}

message PutSettingsRequest {
  PutAuthSettings auth = 1;
  PutQuerySettings query = 2;
  PutSchedulerSettings scheduler = 3;
  PutTLSSettings tls = 4;
  PutLookupSettings lookup = 5;
  optional bool setup_wizard_dismissed = 6;
  PutClusterSettings cluster = 7;
}

message PutSettingsResponse {
  MmdbValidation geoip_validation = 1; // Populated when geoip_db_path was set.
  MmdbValidation asn_validation = 2;   // Populated when asn_db_path was set.
}

// MmdbValidation is the result of probing a MaxMind MMDB file on save.
message MmdbValidation {
  bool valid = 1;
  string error = 2;          // Non-empty on failure; describes the issue.
  string database_type = 3;  // e.g. "GeoLite2-City", "GeoIP2-ISP"
  string build_time = 4;     // RFC 3339 timestamp.
  uint32 node_count = 5;     // Number of nodes in the search tree.
}

message GetPreferencesRequest {}

message GetPreferencesResponse {
  string theme = 1;
  string syntax_highlight = 2;
  string palette = 3;
}

message PutPreferencesRequest {
  string theme = 1;
  string syntax_highlight = 2;
  string palette = 3;
}

message PutPreferencesResponse {}

message SavedQuery {
  string name = 1;
  string query = 2;
}

message GetSavedQueriesRequest {}

message GetSavedQueriesResponse {
  repeated SavedQuery queries = 1;
}

message PutSavedQueryRequest {
  SavedQuery query = 1;
}

message PutSavedQueryResponse {}

message DeleteSavedQueryRequest {
  string name = 1;
}

message DeleteSavedQueryResponse {}

message ListCertificatesRequest {}

message ListCertificatesResponse {
  repeated CertificateInfo certificates = 1;
}

message CertificateInfo {
  string id = 1;
  string name = 2;
}

message GetCertificateRequest {
  string id = 1;
}

message GetCertificateResponse {
  string id = 1;
  string name = 7;
  string cert_pem = 2;
  // key_pem is never populated in responses; private keys must not be exposed via API.
  string key_pem = 3;
  string cert_file = 4;
  string key_file = 5;
}

message PutCertificateRequest {
  string id = 1;
  string name = 7;
  string cert_pem = 2;
  string key_pem = 3;  // When updating, empty means keep existing key.
  string cert_file = 4;
  string key_file = 5;
  bool set_as_default = 6;
}

message PutCertificateResponse {}

message DeleteCertificateRequest {
  string id = 1;
}

message DeleteCertificateResponse {}

message PauseVaultRequest {
  string id = 1;
}

message PauseVaultResponse {}

message ResumeVaultRequest {
  string id = 1;
}

message ResumeVaultResponse {}

message TestIngesterRequest {
  string type = 1;
  map<string, string> params = 2;
}

message TestIngesterResponse {
  bool success = 1;
  string message = 2;
}

message GetIngesterDefaultsRequest {}

message IngesterTypeDefaults {
  map<string, string> params = 1;
}

message GetIngesterDefaultsResponse {
  map<string, IngesterTypeDefaults> types = 1;
}

message NodeConfig {
  string id = 1;
  string name = 2;
}

message PutNodeConfigRequest {
  NodeConfig config = 1;
}

message PutNodeConfigResponse {}

message GenerateNameRequest {}

message GenerateNameResponse {
  string name = 1;
}

message WatchConfigRequest {}

message WatchConfigResponse {}
